# synology-photos-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/synology_photos_ai/: __init__.py  __main__.py  cli.py  config.py
src/synology_photos_ai/ai/: __init__.py  analyzer.py  image_prep.py
src/synology_photos_ai/pipeline/: __init__.py  filenames.py  processor.py  watcher.py
src/synology_photos_ai/store/: __init__.py  state.py
src/synology_photos_ai/synology/: __init__.py  client.py  location.py  spaces.py
