[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synology-photos-ai"
version = "0.1.0"
description = "AI companion for Synology Photos — describe photos and apply tags via OpenAI/LangChain"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "superhero" }]
dependencies = [
  "httpx>=0.27",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "Pillow>=10.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = ["ruff>=0.6"]

[project.scripts]
synology-photos-ai = "synology_photos_ai.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/synology_photos_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"
